changement src logo

--- a/src/main.css
+++ b/src/main.css
@@ -79,7 +79,7 @@ body {
 }
 
 .hero {
-  background-image: url("../public/bank-tree.webp");
+  background-image: url("/bank-tree.webp");
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
